--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,7 @@
     <title>Contacto</title>
 </head>
     <h1>Correo: helppeoplewithcancer@gmail.com </h1>
+        <p>Instructor</p>
 <body>
     
 </body>
